      This is done by adding a file named "<filtername>.formatters". This file defines
      one formatter on each line, with each line containing the name of the formatter and
      the formatter definition, separated by a colon (:).
    - Added menu items for increasing/decreasing table font size, with shortcut keys Ctrl-plus and
      Ctrl-minus.
    - Added options to automatically mark entries imported into an existing database, and to unmark
      previously marked entries when importing.
    - Added ":(x)" modifier to key generator, specifying that the arbitrary string x
      should be used as a fallback value if the value returned by the field marker is empty.
    - Added ":upper" modifier to key generator, to force uppercase for a field marker.
    - Added buttons in External programs tab in Preferences for modifying settings for
      "Push to"-features, and removed obsolete fields.
    - Added support for DOI field in Endnote importer.
    - Improved handling of invalid BibTeX keys containing white space. Parser will now try to
      piece together the key and avoid disturbing the continued parsing. Patch submitted by
      Stephan Lau.
    - Cosmetic change to the entry type label to the left in the entry editor.
    - Changed name handling so a single-entry name without a capital initial letter, such as
      "unknown", will be treated as a solitary last name rather than a von particle.
    - Changed table selection coloring so entries that are grayed out or marked can be
      distinguished from normal entries when selected.
    - Changed handling of "affiliation" in Medline import - now makes sure to escape
      # characters before storing.
    - Modified ACM portal fetcher due to web site changes.
    - Improvements to IEEEXplore fetcher - better handling of month and page fields.
    - Changed behaviour of source panel when an entry contains imbalanced # characters -