@@ -42,7 +42,8 @@
         <p>Thomas Arildsen,
         Michael Beckmann,
         Oliver Beckmann,
-        Fedor Bezrukov,            
+        Fedor Bezrukov,
+        Fabian Bieker,
         Aaron Chen,
         Fabrice Dessaint,
         Nathan Dunn,
